<resources>
    <string name="app_name">Reflejos</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_sign_up_button">Registrarse</string>
    <string name="login_login_in_button">Acceder</string>
    <string name="main_training_button">Entrenamientos</string>
    <string name="main_record_button">Historial</string>
    <string name="main_create_training_button">Crear entrenamiento</string>
    <string name="main_devices_button">Dispositivos</string>
    <string name="sign_out_button">CERRAR SESION</string>
    <string name="form_sign_up_title">Registro</string>
    <string name="form_sign_in_hint_password">Contraseña</string>
    <string name="form_sign_in_hint_password_confirmation">Confirmar contraseña</string>
    <string name="form_sign_in_email_label">Introducir email válido</string>
    <string name="form_sign_in_password_label">Introducir contraseña</string>
    <string name="form_sign_in_password_confirmation_label">Introduce nuevamente la contraseña</string>
    <string name="form_sign_in_name">Nombre y apellidos:</string>
    <string name="form_sign_in_address">Dirección:</string>
    <string name="form_sign_in_zip_code">Código postal:</string>
    <string name="form_sign_in_trainer_switch">Registrarse como Entrenador</string>
    <string name="main_help_button">Ayuda</string>
    <string name="main_clients_button">Clientes</string>
    <string name="help_text">REFLEJOS es una iniciativa colaborativa del Centro Integrado Politécnico Estella que busca mejorar los reflejos y la velocidad de reacción mediante el desarrollo de un producto deportivo real. \n\n Los entrenadores pueden crear entrenamientos, ver los dispositivos conectados y ver el historial de sus clientes. \n\n Los clientes pueden ejecutar sus entrenamientos, ver los dispositivos conectados y consultar su historial. \n\n En DISPOSITIVOS podemos comprobar que los dispositivos de luces estén conectados mediante bluetooth. \n\n REFLEJOS es una app en desarrollo.</string>

</resources>