<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EntrenadorFragment" >

    <Button
        android:id="@+id/createTrainingButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/main_create_training_button" />

    <Button
        android:id="@+id/clientesButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/main_clients_button" />

    <Button
        android:id="@+id/devicesButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/main_devices_button" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/main_help_button" />

</LinearLayout>