<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClienteFragment" >

    <Button
        android:id="@+id/trainingButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/main_training_button"
        android:layout_gravity="center"
        android:background="@drawable/boton_redondo"/>

    <Button
        android:id="@+id/recordButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/main_record_button"
        android:layout_gravity="center"
        android:background="@drawable/boton_redondo"/>

    <Button
        android:id="@+id/devicesButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/main_devices_button"
        android:layout_gravity="center"
        android:background="@drawable/boton_redondo"/>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/main_help_button"
        android:layout_gravity="center"
        android:background="@drawable/boton_redondo"/>

</LinearLayout>