<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormSignInActivity">

    <TextView
        android:id="@+id/emailLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_sign_in_email_label"
        android:layout_marginTop="110dp"
        android:layout_marginStart="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/login_hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/emailLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/passwordLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_sign_in_password_label"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
         />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/form_sign_in_hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabelTextView" />

    <TextView
        android:id="@+id/passwordConfirmationLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_sign_in_password_confirmation_label"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/passwordConfirmationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/form_sign_in_hint_password_confirmation"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationLabelTextView" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/login_sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationEditText" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="60sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/comebackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="Volver atrás"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>