<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <include layout="@layout/header_layout"
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/trainingButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:text="@string/main_training_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recordButton"/>

    <Button
        android:id="@+id/recordButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/main_record_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainingButton"
        app:layout_constraintBottom_toTopOf="@+id/createTrainingButton"/>

    <Button
        android:id="@+id/createTrainingButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/main_create_training_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton"
        app:layout_constraintBottom_toTopOf="@+id/devicesButton"/>

    <Button
        android:id="@+id/devicesButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="@string/main_devices_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTrainingButton"
        app:layout_constraintBottom_toTopOf="@+id/helpButton"/>

    <Button
        android:id="@+id/helpButton"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:text="Ayuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devicesButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>